--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -3,8 +3,6 @@
     margin: 0px;
 }
 
-.cabecera{
-}
 
 .logo{
     position: absolute;
@@ -74,18 +72,19 @@ button{
 
 .contimg {
     display: flex;
-    position: relative;
-  }
-  
-  .contimg .imagen1 {
-    flex: 1;
-    z-index: 1;
-  }
-  
-  .contimg .imagen2.overlay {
-    position: absolute;
 
-    top: 50px;
-    left: -50px;
-    z-index: 2;
-  }
+}
+.imagen2 img{
+    margin-left: -250px;
+    margin-top: 280px;
+    border-radius: 30px;
+    border: solid white 5px;
+}
+.imagen1 img{
+    border-top-right-radius: 30px;
+}
+
+.star{
+    margin-top: -70px;
+    margin-left: -20px;
+}
