--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -127,6 +127,7 @@ top: 478px;
 background: #FF5B2E;
 box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
 border-radius: 10px;
+border: 0px;
 
 font-family: 'Poppins';
 font-style: normal;
@@ -221,6 +222,23 @@ box-sizing: border-box;
     top: 600px;
 }
   
+.aviso p{
+    position: absolute;
+    left: 687px;
+    top: 630px;
+    width: 300px;
+    height: 42px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    color: #656689; 
+}
 
-
-
+#huella {
+    position: absolute;
+    left: 132px;
+    top: 646px;
+}
